--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.description {
+  padding-top: 40px;
+  font-size: 20px, 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text{
+  color: #808000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.reduce-color{
+  opacity: 0.9;
+  margin-right: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.meomeo{
+  padding-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.style-text{
+  border: 3px solid #FF0000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tie{
+	padding: 10px 20px;
+	margin: 10px;
+	cursor: pointer;
+}
+
+.active{
+	border: 2px solid #000000;
 }
